--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Learning about ngrx",
+  "name": "Learningngrx",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -22,9 +22,9 @@
     "@angular/platform-browser-dynamic": "^4.3.0",
     "@angular/router": "^4.3.0",
     "@ngrx/core": "^1.2.0",
-    "@ngrx/effects": "^2.0.4",
-    "@ngrx/store": "^2.2.3",
-    "@ngrx/store-devtools": "^3.2.4",
+    "@ngrx/effects": "^4.0.1",
+    "@ngrx/store": "^4.0.0",
+    "@ngrx/store-devtools": "^4.0.0",
     "core-js": "^2.4.1",
     "ngx-infinite-scroll": "^0.5.1",
     "ngx-progressbar": "^2.0.3",
